day3-sg.tf
#lets create our ec2-sg.tf file which will open port 22-443-80 copy line 2 till 44
  resource "aws_security_group" "web_sg" {
  name        = "${local.project_tags.Name}-web-sg"
  description = "Security group for web servers"
  vpc_id      = aws_vpc.my_vpc.id #this sg will be attached with your vpc
  # ... other configuration ...

  ingress  {
    description = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress  {
    description = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress  {
    description = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    description = "allow all outbound rule"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
tags = {
    Name = "${local.project_tags.Name}-web-sg"
   
  }
}

###do terraform apply
  ##then go to ec2 below you will find the sg you have created just now click on it 
  #look for inbound rule 443 80 22 is open
